--- a/html/html2.html
+++ b/html/html2.html
@@ -1,15 +1,12 @@
-
-
-
-
-
 <!DOCTYPE html>
-<html lang="no">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Rutenett</title>
-
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../css/style2.css'>
+    <script src='../javascript/java2.js' defer></script>
 </head>
 <body>
     <header>
@@ -20,6 +17,4 @@
         <div id="grid"></div>
     </main>
 </body>
-
-<script src="../javascript/java2.js"></script>
-<link rel="stylesheet" href="../css/style2.css">
+</html>
