--- a/html/html2.html
+++ b/html/html2.html
@@ -10,11 +10,14 @@
 </head>
 <body>
     <header>
-        <h1 id="wish">Wordle</h1>
+        <h1 id="wish">Wordle from wish</h1>
     </header>
 
     <main>
         <div id="grid"></div>
     </main>
+    <footer>
+        <button id="playAgain">Play again</button>
+    </footer>
 </body>
 </html>
