--- a/html/html2.html
+++ b/html/html2.html
@@ -15,6 +15,9 @@
 
     <main>
         <div id="grid"></div>
+        <input type="text" id="brukerInnput" maxlength="5" placeholder="Skriv inn et ord">
+        <button onclick="gjettOrd()">Gjett</button>
+        <p id="melding"></p>
     </main>
 </body>
 </html>
