--- a/html/html2.html
+++ b/html/html2.html
@@ -7,6 +7,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../css/style2.css'>
     <script src='../javascript/java2.js' defer> //måtte bruke defer, så funka programmet </script>
+    <script src='../javascript/java1.js' defer> //måtte bruke defer, så funka programmet </script>
+
 </head>
 <body>
     <header>
@@ -20,7 +22,7 @@
         <p id="melding"></p>
     </main>
     <footer>
-        <button id="playAgain">Play again</button>
+        <button id="playAgain" onclick="location.reload();">Play again</button>
     </footer>
 </body>
 </html>
