--- a/html/html2.html
+++ b/html/html2.html
@@ -7,7 +7,6 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../css/style2.css'>
     <script src='../javascript/java2.js' defer> //måtte bruke defer, så funka programmet </script>
-    <script src='../javascript/java1.js' defer> //måtte bruke defer, så funka programmet </script>
 
 </head>
 <body>
@@ -15,7 +14,7 @@
         <h1 id="wish">Wordle from wish</h1>
     </header>
 
-    <main>
+    <main contenteditable="true">
         <div id="grid"></div>
         <input type="text" id="brukerInnput" maxlength="5" placeholder="Skriv inn et ord">
         <button onclick="gjettOrd()">Gjett</button>
