--- a/html/html2.html
+++ b/html/html2.html
@@ -6,7 +6,7 @@
     <title>Rutenett</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../css/style2.css'>
-    <script src='../javascript/java2.js' defer> //måtte bruke defer, så funka programmet </script>
+    <script src='../javascript/java2.js' defer>  </script>
 
 </head>
 <body>
@@ -17,7 +17,7 @@
     <main>
         <div id="grid"></div>
         <p id="melding"></p>
-        <button id="playAgain" onclick="startSpill()">Start på nytt</button>
+        <button id="playAgain" onclick="location.reload()">Start på nytt</button>
     </main>
 </body>
 </html>
