--- a/html/htmlChat.html
+++ b/html/htmlChat.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../css/stylechat.css'>
 
-    <script src='../javascript/javachat.js' defer> //måtte bruke defer, så funka programmet </script>
+    <script src='../javascript/javachat2.js' defer> //måtte bruke defer, så funka programmet </script>
 
 
 
